fix: fixed service tests and removed controllers tests.